Sección News y About us

--- a/index.html
+++ b/index.html
@@ -22,21 +22,55 @@
                                 <!--Botón call to action-->
         <div>
         <h3>Select The Best Quality Breads</h3>
-        <button>Select Breads</button>
+        <button class="button">Select Breads</button>
         <img src="img/home-bread.png" alt="Imagen de pan" width="500" height="500">
         </div>
     </header> 
-    <main>
+    <main>                      <!--Sección News - Cards de pan-->
      <section id="News" class="#News">
-        <h2>New Breads</h2>
+        <h2 class ="section-tittle">New Breads</h2>
         <div class="menu-list">
+
             <div class="menu-item">
-                
+                <h2>Rye Bread</h2>
+                <p>Baked with healthy, gluten-free spundough for good nutrition</p>
+                <img src = "img/new-bread-1.png" alt="Rye Bread" class="menu-image">
             </div>
 
-        </div>
+            <div class ="menu-item">
+                <img src="img/new-bread-2.png" alt="Whole Grain Bread" class="menu-image">
+                <h2>Whole Grain Bread</h2>
+                <p>Crispy and homemade prepared from organic yeast-free flour.</p>
+            </div>
 
+            <div class="menu-item">
+                <h2>Multigrain Bread</h2>
+                <p>Tasty and made with different natural grains from the countryside</p>
+                <img src="img/new-bread-3.png" alt="Multigrain Bread" class="menu-image">
+            </div>
+        </div>
+        
+        <div>
+            <button class="button">See more breads</button>
+        </div>
      </section>
+
+                            <!--Sección About us-->
+        <section>
+            <div>
+                <img src="img/about-bread.png" alt="About us Section Bread" class="about-image">
+            </div>
+
+            <div>
+            <h2 class="section-tittle">About us</h2>
+            <p>We prepare all types of bread that are made at home, maintaning the tradition of using only the best ingredients made with local products whenever possible. We have an extensive line of freshly prepared bakery and coffee products.></p>
+            <button class="button">Know More</button>
+            </div>
+        </section>
+                            <!--Sección Favorites-->
+        <section class="favorite-section" id="favorite">
+            <h2 class="section-tittle">Customers Favorites</h2>
+        </section>
     </main>
 </body>
 </html>
